--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.10.5",
+    "@types/node-telegram-bot-api": "^0.64.7",
+    "@types/pg": "^8.11.10",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "node-telegram-bot-api": "^0.66.0",
+    "pg": "^8.13.1"
   }
 }
