--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
     "@types/node-telegram-bot-api": "^0.64.7",
     "@types/pg": "^8.11.10",
@@ -19,7 +21,9 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.13.1"
   }
