--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "npx nodemon",
-    "start": "node index.js"
+    "start": "node build/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
