--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "npx nodemon",
-    "start": "node build/index.js",
-    "build": "tsc"
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
